--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.17",
+        "@inertiaui/modal-vue": "file:vendor/inertiaui/modal/vue",
         "daisyui": "^5.0.50",
+        "lodash": "^4.17.21",
         "oh-vue-icons": "^1.0.0-rc3"
     }
 }
